# apps/backend/src/metrics/dtos.ts
@@ -1,9 +1,0 @@
-export class NetWorthDto {
-    personId!: number;
-    netWorthCents!: number;
-}
-
-export class BorrowableDto {
-    personId!: number;
-    borrowableCents!: number;
-}
