# apps/backend/src/process/process.controller.ts
@@ -1,4 +1,5 @@
 import {
+    BadRequestException,
     Body,
     Controller,
     HttpCode,
@@ -7,20 +8,29 @@ import {
     Post,
 } from "@nestjs/common";
 import { ProcessService } from "@/process/process.service.js";
+import { BodyDto, BodySchema } from "@/process/process.dto.js";
+import { ApiBody } from "@nestjs/swagger";
 
-type BodyDto = { process_id: 1 | 2 | 3 };
-
-@Controller("webhook")
+@Controller("process")
 export class ProcessController {
     constructor(
         @Inject(ProcessService) private readonly service: ProcessService,
     ) {}
 
-    @Post("process")
+    @Post()
+    @ApiBody({
+        schema: {
+            type: "object",
+            properties: { processId: { enum: ["1", "2", "3"] } },
+        },
+    })
     @HttpCode(HttpStatus.ACCEPTED)
     async trigger(@Body() body: BodyDto) {
-        const id = body.process_id;
-        await this.service.run(id);
+        const id = BodySchema.safeParse(body);
+        if (!id.success) {
+            throw new BadRequestException("Invalid process ID");
+        }
+        await this.service.run(id.data.processId);
         return { ok: true } as const;
     }
 }
